<resources>
    <string name="app_name">UserBase</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="balance">Balance</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="save">Save</string>
    <string name="warning">Fill name and email fields.</string>
</resources>
